# AI_learn

./: .pre-commit-config.yaml  README.md  package-lock.json
w1/project-alpha/backend/: .env  .env.example  DEBUG_ENUM.md  M1_MIGRATION_STEPS.md  README.md  RESET_MIGRATIONS.md  TROUBLESHOOTING.md  alembic.ini  pyproject.toml  reset_migrations.ps1  reset_migrations.sh  seed.sql  test.db
w1/project-alpha/backend/app/: __init__.py  config.py  db.py  errors.py  logger.py  main.py  models.py  schemas.py
w1/project-alpha/backend/app/routes/: health.py  tags.py  tickets.py
w1/project-alpha/backend/app/services/: tags.py  tickets.py
w1/project-alpha/backend/migrations/: env.py
w1/project-alpha/backend/migrations/versions/: 0001_initial.py
w1/project-alpha/backend/project_alpha_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
w1/project-alpha/backend/tests/: test_health.py  test_tags.py  test_tickets.py
w2/db_query/backend/: .env  .env.example  ARCHITECTURE_REFACTOR.md  ARCHITECTURE_SUMMARY.md  PHASE1_COMPLETE.md  PHASE3_COMPLETE.md  README.md  pyproject.toml  pyrightconfig.json
w2/db_query/backend/app/: config.py  db.py  main.py  models.py  schemas.py
w2/db_query/backend/app/adapters/: README.md  __init__.py  base.py  factory.py  mysql.py  postgresql.py
w2/db_query/backend/app/routes/: databases.py
w2/db_query/backend/app/services/: database.py  llm.py  (+2 more)
w2/db_query/backend/db_query_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
w2/db_query/backend/tests/: __init__.py  conftest.py  test_api.py  test_database.py  test_execute_query.py  test_llm.py  test_metadata.py  test_refresh_metadata.py  test_routes_edge_cases.py  test_sql_parser.py  test_sql_parser_edge_cases.py
(+76 files in other folders)
