 [project]
 name = "project-alpha-backend"
 version = "0.1.0"
 description = "Project Alpha backend service (FastAPI + Postgres)"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.111,<1.0",
     "uvicorn[standard]>=0.30,<1.0",
     "SQLAlchemy[asyncio]>=2.0,<3.0",
     "asyncpg>=0.29,<1.0",
     "pydantic>=2.7,<3.0",
     "alembic>=1.13,<2.0",
     "python-multipart>=0.0.9,<1.0",
     "httpx>=0.27,<1.0",
 ]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "aiosqlite>=0.19,<1.0",
]

 [build-system]
 requires = ["setuptools>=61"]
 build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
