[project]
name = "db-query-backend"
version = "0.1.0"
description = "Database query tool backend (FastAPI + SQLite + PostgreSQL)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "SQLAlchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "sqlglot[rs]>=24.0",
    "openai>=1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

